--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3.9'
+version: "3.9"
 services:
- redis-server:
-   image: redis
- node-app:
-   build: .
- ports:
-   - "8080: 8080"
+  web:
+    image: 127.0.0.1:5000/b-safe
+    build: .
+    ports:
+      - "8080:8080"
+  redis:
+    image: redis:alpine
