--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3.9"
 services:
   web:
     image: 139.59.168.80:8080/b-safe
-    build: .
-    ports:
+    build:
+      dockerfile: Dockerfile
+      context: .
+   ports:
       - "8080:8080"
   redis:
     image: redis:alpine
