--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 services:
   web:
-    build:
-      dockerfile: Dockerfile
-   ports:
+    image: 139.59.168.80:5000/b-safe
+    build: .
+    ports:
       - "8080:8080"
   redis:
     image: redis:alpine
