--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   web:
-    image: 139.59.168.80:5000/b-safe
+    image: https://index.docker.io/v1/b-safe
     build: .
     ports:
       - "8080:8080"
